--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
   },
   "dependencies": {
     "core-js": "^3.4.4",
+    "echarts": "^4.6.0",
+    "echarts-liquidfill": "^2.0.5",
     "register-service-worker": "^1.6.2",
     "vue": "^2.6.10",
+    "vue-organization-chart": "^1.1.6",
+    "vue-particles": "^1.0.9",
     "vue-router": "^3.1.3",
     "vuex": "^3.1.2"
   },
